# Wealth-Accumulation-Analyzer

./: .gitignore  README.md  config.toml  pyproject.toml
docs/superpowers/plans/: 2026-03-21-wealth-accumulation-analyzer-implementation-plan.md
docs/superpowers/specs/: 2026-03-21-wealth-accumulation-analyzer-design.md  IMPLEMENTATION_CHECKLIST.md
src/wealth_analyzer/: __init__.py  cli.py  config.py
src/wealth_analyzer/analysis/: __init__.py  dca.py  lump_sum.py  metrics.py
src/wealth_analyzer/charts/: __init__.py  cagr_bar.py  dca_vs_lump.py  drawdown_chart.py  growth_curves.py  scatter.py  style.py
src/wealth_analyzer/data/: __init__.py  cache.py  fetcher.py
src/wealth_analyzer/reports/: __init__.py  charts.py  excel.py  excel_report.py  pdf.py  pdf_report.py  terminal.py
tests/: test_cache.py  test_charts.py  test_cli.py  test_config.py  test_dca.py  test_excel.py  test_fetcher.py  test_imports.py  test_lump_sum.py  test_metrics.py  test_pdf.py  test_terminal.py
