[project]
name = "wealth-accumulation-analyzer"
version = "1.0.0"
description = "Long-term wealth accumulation: individual stocks vs ETF benchmarks"
requires-python = ">=3.11"
license = { text = "AGPL-3.0" }
dependencies = [
  "yfinance>=0.2.40",
  "pandas>=2.2",
  "numpy>=1.26",
  "scipy>=1.12",
  "matplotlib>=3.8",
  "quantstats>=0.0.62",
  "openpyxl>=3.1",
  "reportlab>=4.2",
  "pydantic>=2.6",
  "adjustText>=1.1",
  "rich>=13.7",
  "click>=8.1",
  "pyarrow>=15.0",
]

[project.scripts]
analyze = "wealth_analyzer.cli:run_analysis"
fetch-data = "wealth_analyzer.cli:run_fetch"
clear-cache = "wealth_analyzer.cli:run_clear_cache"
list-tickers = "wealth_analyzer.cli:run_list_tickers"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/wealth_analyzer"]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "-p no:capture"

[dependency-groups]
dev = [
  "pytest>=8.1",
  "pytest-cov>=5.0",
  "ruff>=0.4",
  "mypy>=1.9",
]
